# fallout-2-editor

./: README.md  f2_save_file.py  main.py  pyproject.toml
data/: f2items.csv
